securityGroup.tf
resource "aws_security_group" "Cluster-server-SG" {
  name        = "Cluster-server-SG"
  description = "Allow HTTP inbound connections"
  vpc_id = aws_vpc.Cluster-VPC.id
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22 
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] 
  }
  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
  tags = {
    Name = "Cluster-server-SG"
  }

}
